fix ugly white space!

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -135,3 +135,7 @@ h1 {
   display: none;
   height: 200px;
 }
+
+iframe { 
+  display: block;
+}
